# Unveiling

./: .env.example  .gitignore  .impeccable.md  CLAUDE.md  Procfile  README.md  app.py  brainstorm.py  crew.py  deploy.sh  dev.sh  e2e_exa_test.py  log_writer.py  main.py  pyproject.toml  pytest.ini  render.yaml  requirements.txt  run_verbose.py  start_server.command  vercel.json
.planning/: STATE.md
.planning/plans/: ui-cleanup-and-quotes.md
agents/: __init__.py  convergence.py  debate.py  deepdig.py  inception.py  lens_op.py  prediction_check.py  search.py
blackboard/: __init__.py  retraction.py  store.py
cli/: main.py  run_verbose.py
config/: agents.yaml  tasks.yaml
docs/: PRD.md
docs/prompts/: convergence.md  debate.md  deepdig.md  (+7 more)
frontend/: app.py  payload.py
graph/: __init__.py  build.py  routing.py
llm/: __init__.py  abstraction.py  client.py  degradation.py  prompt_loader.py
models/: __init__.py  _enums.py  blackboard.py  schemas.py  state.py
orchestrator/: __init__.py  judge.py  meta.py  rules.py  scheduler.py
prompt_lab/: case_extraction.txt  lateral_query.txt  meta.json  validate_queries.txt  vertical_query.txt
prompts/: case_extraction.txt  case_extraction_single.txt  convergence_synthesize.txt  inception_system.txt  inception_user.txt  lateral_query.txt  validate_queries.txt  vertical_query.txt
search/: __init__.py  engine.py  llm_fallback.py  query_gen.py  serper.py  wikipedia.py
shared/: log_writer.py
templates/: index.html
tools/: blackboard.py  blackboard_tool.py  search_tool.py  shared_blackboard.py  slide_generator.py
(+82 files in other folders)
